# viral-cutter-ai

./: .gitignore  README.md  README_MANAGER.md  analyze_virals.py  benchmark.py  content_classifier.py  cutter.py  download_content.py  gemini_transport.py  local_scoring.py  main.py  manager.py  pipeline_modes.py  pyproject.toml  requirements.txt  review_dashboard.py  semantic_clip_director.py  subtitler.py  subtitler_checker.py  transcribe.py  transcribe_podcast.py
benchmarks/: README.md  cases.json  human_review_template.csv  report.md  results.json  review_dashboard.html
diarization/: __init__.py  base.py  heuristic_backend.py
layout/: __init__.py  base.py  commentary.py  gameplay.py  generic.py  podcast.py  tutorial.py
strategies/: __init__.py  base.py  commentary.py  gameplay.py  generic.py  podcast.py  tutorial.py
tests/: test_benchmark.py  test_boundary_refinement.py  test_content_classifier.py  test_diarization.py  test_layout.py  test_review_dashboard.py  test_semantic_clip_director.py  test_subtitler.py
transcription/: __init__.py  base.py  faster_whisper_backend.py
