[project]
name = "viral-cutter-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.4.22",
    "ffmpeg-python>=0.2.0",
    "faster-whisper>=1.2.1",
    "google-generativeai>=0.8.6",
    "mediapipe>=0.10.35",
    "numpy>=2.3.4",
    "opencv-python-headless>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.3.17",
]
